--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: G's Homepage
-page-top-title: G
-top-section-bg-text: Be what you wanna be
-home-subtitle: G&ensp;|&ensp;G
-copyright-text: '&copy; G 2023-2025. All Rights Reserved.'
+title: GloriaGong-ghj's Homepage
+page-top-title: Gonghuijie
+top-section-bg-text: Per aspera ad astra
+home-subtitle: Gonghuijie&ensp;|&ensp;Gonghuijie
+copyright-text: '&copy; Gonghuijie 2023-2025. All Rights Reserved.'
