--- a/contents/config.yml
+++ b/contents/config.yml
@@ -3,3 +3,5 @@ page-top-title: Gonghuijie
 top-section-bg-text: Per aspera ad astra
 home-subtitle: Gonghuijie&ensp;|&ensp;Gonghuijie
 copyright-text: '&copy; Gonghuijie 2023-2025. All Rights Reserved.'
+##一个名为 config.yml 配置文件，通常用于静态网站生成器（如 Hugo、Jekyll、Hexo 等）或个人主页项目中。
+##它存储了网站的基本信息和全局设置，用于控制网站的外观、元数据和其他功能。
