--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,7 +1,7 @@
 title: GloriaGong-ghj's Homepage
-page-top-title: Gonghuijie
+page-top-title: 龚慧杰
 top-section-bg-text: Per aspera ad astra
-home-subtitle: Gonghuijie&ensp;|&ensp;Gonghuijie
+home-subtitle: 龚慧杰&ensp;|&ensp;Gloria
 copyright-text: '&copy; Gonghuijie 2023-2025. All Rights Reserved.'
 ##一个名为 config.yml 配置文件，通常用于静态网站生成器（如 Hugo、Jekyll、Hexo 等）或个人主页项目中。
 ##它存储了网站的基本信息和全局设置，用于控制网站的外观、元数据和其他功能。
