--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,6 +1,6 @@
 title: GloriaGong-ghj's Homepage
 page-top-title: 龚慧杰
-top-section-bg-text: Per aspera ad astra
+top-section-bg-text: 通过荆棘，抵达星辰
 home-subtitle: 龚慧杰&ensp;|&ensp;Gloria
 copyright-text: '&copy; Gonghuijie 2023-2025. All Rights Reserved.'
 ##一个名为 config.yml 配置文件，通常用于静态网站生成器（如 Hugo、Jekyll、Hexo 等）或个人主页项目中。
